--- a/front-tributi/src/components/Steps/Steps.css
+++ b/front-tributi/src/components/Steps/Steps.css
@@ -6,13 +6,20 @@
   padding-top: 80px;
   text-align: center;
   background-color: #fff;
-  border: 1px dashed #fff;
-  border-radius: 5px;
 }
 
 .steps-action {
   margin-top: 30px;
+  border-top-style: double;
+  display: flex;
+  justify-content: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 .steps-item-icon {
   background-color: red;
+}
+
+Button {
+  border-radius: 15px;
 }
