--- a/front-tributi/src/components/layout/MainContent/MainContent.css
+++ b/front-tributi/src/components/layout/MainContent/MainContent.css
@@ -1,4 +1,5 @@
-section {
+.dsc-main-content {
+  height: 80vh;
   background: #fff;
   border-radius: 5px;
   box-shadow: 1px 1px 12px 1px rgba(0, 0, 0, 0.1);
