--- a/front-tributi/src/components/Steps/Steps.css
+++ b/front-tributi/src/components/Steps/Steps.css
@@ -2,19 +2,19 @@
 
 .steps-content {
   min-height: 250px;
-  margin-top: 50px;
   padding-top: 80px;
   text-align: center;
   background-color: #fff;
 }
 
 .steps-action {
-  margin-top: 30px;
+  width: 50%;
   border-top-style: double;
   display: flex;
   justify-content: center;
   margin-left: 25%;
   margin-right: 25%;
+
 }
 .steps-item-icon {
   background-color: red;
