Diseño de parrafo Actualizacion

--- a/front-tributi/src/components/UpdateDump/UpdateDump.css
+++ b/front-tributi/src/components/UpdateDump/UpdateDump.css
@@ -4,8 +4,8 @@
   max-width: 400px;
   margin: 0 auto;
  }
- 
- .title-tax-engine {
+
+ .title-update-dump {
    background-color: #2a6662;
    margin-bottom: 50px;
    margin-top: -50px;
@@ -14,15 +14,16 @@
    margin-left: -100px;
    border-radius: 15px;
  }
- 
+
  .letter-title {
    color: white;
-   display: contents;
-   align-content: center;
    font-size:xx-large;
    font-weight: 500;
+   display         : flex;
+   justify-content : center;
+   align-items     : center;
  }
- 
+
  .anticon svg{
    color: #2a6662;
  }
