--- a/front-tributi/src/components/Status/Status.css
+++ b/front-tributi/src/components/Status/Status.css
@@ -61,11 +61,11 @@ h1 {
   height: 200 px;
 }
 
-button {
+.Button-Start {
   color: white;
   background-color: #2a6662;
   margin: 0;
   position: absolute;
-  top: 70%;
-  left: 50%;
+  top: 85%;
+  left: 48.5%;
 }
