Componente Layaout - Actualizando Footer

--- a/front-tributi/src/components/layout/Footer/Footer.css
+++ b/front-tributi/src/components/layout/Footer/Footer.css
@@ -2,8 +2,7 @@ footer {
   height: 10vh;
   width: 100%;
   text-align: center;
-  background: #2a6662
-    url("../../../assets/static/footer (1).jpg");
+  background: #1c3535 url("../../../assets/static/descarga.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
