--- a/front-tributi/src/components/LightweightFile/LightweightFile.css
+++ b/front-tributi/src/components/LightweightFile/LightweightFile.css
@@ -6,13 +6,12 @@
 }
 
 .title-tax-engine {
-  background-color: #2a6662;
+  background-color: #42e1c5;
   margin-bottom: 50px;
   margin-top: -50px;
-  height: 60px;
+  height: 53px;
   width: 150%;
   margin-left: -100px;
-  border-radius: 15px;
 }
 
 .letter-title {
