--- a/front-tributi/src/components/Mathops/Mathops.css
+++ b/front-tributi/src/components/Mathops/Mathops.css
@@ -6,13 +6,12 @@
  }
 
  .title-update-dump {
-   background-color: #2a6662;
+   background-color: #42e1c5;
    margin-bottom: 50px;
    margin-top: -50px;
    height: 60px;
    width: 150%;
    margin-left: -100px;
-   border-radius: 15px;
  }
 
  .letter-title {
