--- a/front-tributi/src/components/ConfigFile/ConfigFile.css
+++ b/front-tributi/src/components/ConfigFile/ConfigFile.css
@@ -27,7 +27,8 @@
    color: #2a6662;
  }
 
-ul {
+.form-checkbox {
+  text-align: left;
   margin: 10%;
   padding: 5%;
   list-style: none;
@@ -37,7 +38,7 @@ ul {
   border-radius: 3%;
 }
 
-li {
-  text-align: left;
-  margin: 4%;
+.ant-form {
+  margin: 20px;
+  padding: 10px;
 }
