--- a/front-tributi/src/components/UpdateDump/UpdateDump.css
+++ b/front-tributi/src/components/UpdateDump/UpdateDump.css
@@ -1,28 +1,34 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .box-dragg-file {
   max-width: 400px;
   margin: 0 auto;
- }
+}
 
- .title-update-dump {
-   background-color: #2a6662;
-   margin-bottom: 50px;
-   margin-top: -50px;
-   height: 60px;
-   width: 150%;
-   margin-left: -100px;
- }
+.title-update-dump {
+  background-color: #2a6662;
+  margin-bottom: 50px;
+  margin-top: -50px;
+  height: 60px;
+  width: 150%;
+  margin-left: -100px;
+}
 
- .letter-title {
-   color: white;
-   font-size:xx-large;
-   font-weight: 500;
-   display         : flex;
-   justify-content : center;
-   align-items     : center;
- }
+.letter-title {
+  color: white;
+  font-size: xx-large;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- .anticon svg{
-   color: #2a6662;
- }
+.anticon svg {
+  color: #2a6662;
+}
+
+.select-button-mathops {
+  border-radius: 2px;
+  margin-top: 15px;
+  margin-left: -6px;
+}
