--- a/front-tributi/src/components/LightweightFile/LightweightFile.css
+++ b/front-tributi/src/components/LightweightFile/LightweightFile.css
@@ -26,3 +26,11 @@
 .anticon svg{
   color: #2a6662;
 }
+
+.select-button-lightweight {
+  border-radius: 2px;
+  margin-top: 15px;
+  margin-left: -6px;
+  color: white;
+  margin-bottom: 10px;
+}
