--- a/front-tributi/src/components/TaxFile/TaxFile.css
+++ b/front-tributi/src/components/TaxFile/TaxFile.css
@@ -31,3 +31,11 @@
   font-size: 1.5em;
   margin-top: -10%;
 }
+
+.select-button-engine {
+  border-radius: 2px;
+  margin-top: 15px;
+  margin-left: -6px;
+  color: white;
+  margin-bottom: 10px;
+}
